--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -18,15 +18,15 @@
                           <span class="caret"></span></a>
                           <ul class="dropdown-menu">
                             <li><a href="/company">Company Listing</a></li>
-                            <li><a href="#">Add Company</a></li>
+                            <li><a href="/company/add">Add Company</a></li>
                           </ul>
                         </li>
                         <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Employee
                                 <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                  <li><a href="#">Employee Listing</a></li>
-                                  <li><a href="#">Add Employee</a></li>
+                                  <li><a href="/employee">Employee Listing</a></li>
+                                  <li><a href="/employee/add">Add Employee</a></li>
                                 </ul>
                               </li>
                       </ul>
