--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/css/bootstrap-datepicker.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/font-awesome/css/font-awesome.min.css">
         <script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
         <script type="text/javascript" src="/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="/js/bootstrap-datepicker.min.js"></script>
